Chore: Scripts security bounds + mock weth fixed

--- a/.env.example
+++ b/.env.example
@@ -165,8 +165,48 @@ TOKEN1_BASE_SEPOLIA=<HIGHER_TOKEN_ADDRESS>
 # Pool parameters
 TICK_SPACING_BASE_SEPOLIA=60
 
+# ─────────────────────────────────────────────────────────────────────────────────
+# CRITICAL: SQRT_PRICE AND JIT TICK RANGE ALIGNMENT
+# ─────────────────────────────────────────────────────────────────────────────────
+#
+# For balanced JIT liquidity (equal value of token0/token1), SQRT_PRICE must be
+# at the GEOMETRIC CENTER of the JIT tick range. This is critical for tight ranges!
+#
+# WRONG: Arbitrary sqrtPrice with arbitrary JIT range → highly skewed token ratios
+#        (e.g., 74:1 instead of 1:1 for a 2-tick range!)
+# RIGHT: Calculate sqrtPrice from JIT range center, OR calculate JIT range from sqrtPrice
+#
+# FORMULA - Given JIT tick range [tickLower, tickUpper]:
+#   centerTick = (tickLower + tickUpper) / 2
+#   sqrtPrice = sqrt(1.0001^centerTick) * 2^96
+#
+# PYTHON HELPER (copy-paste to calculate):
+#   import math
+#   def jit_range_to_sqrt_price(tick_lower, tick_upper):
+#       center_tick = (tick_lower + tick_upper) / 2
+#       return int(math.sqrt(1.0001 ** center_tick) * (2**96))
+#
+#   def sqrt_price_to_jit_range(sqrt_price_x96, half_width, tick_spacing):
+#       price = (sqrt_price_x96 / 2**96) ** 2
+#       center_tick = int(math.log(price) / math.log(1.0001))
+#       # Round center to tick spacing
+#       center_tick = (center_tick // tick_spacing) * tick_spacing
+#       return (center_tick - half_width * tick_spacing,
+#               center_tick + half_width * tick_spacing)
+#
+# EXAMPLE - For 1:1 stablecoin pool with 18dec/6dec tokens (e.g., DAI/USDC):
+#   Price in raw terms = 10^6 / 10^18 = 1e-12
+#   centerTick = log(1e-12) / log(1.0001) ≈ -276325
+#   For tick_spacing=1 and half_width=1: JIT range = [-276326, -276324]
+#   sqrtPrice = jit_range_to_sqrt_price(-276326, -276324) = 79224306130968649924608
+#
+# WARNING: Using a sqrtPrice that's NOT centered in your JIT range causes extreme
+# asymmetry. A 2-tick range with sqrtPrice at 97% (instead of 50%) gives 74:1 ratio!
+# ─────────────────────────────────────────────────────────────────────────────────
 # Starting price: floor(sqrt(token1/token0) * 2^96)
-# Default 79228162514264337593543950336 = sqrt(1) * 2^96 = 1:1 price ratio
+# Starting price: sqrtPriceX96 = sqrt(price_raw) * 2^96
+# where price_raw = token1_amount / token0_amount (in raw wei, accounting for decimals)
+# MUST BE at the geometric center of JIT tick range for balanced liquidity!
 SQRT_PRICE_BASE_SEPOLIA=79228162514264337593543950336
 
 # Initial liquidity amounts (in wei)
@@ -181,8 +221,22 @@ INITIAL_FEE_BASE_SEPOLIA=3000
 # Target ratio: 0.5e18 = 50% (balanced), 1e18 = 100%
 TARGET_RATIO_BASE_SEPOLIA=500000000000000000
 
-# JIT tick range (immutable after pool initialization)
-# These define where JIT liquidity will be provided during swaps
+# ─────────────────────────────────────────────────────────────────────────────────
+# JIT TICK RANGE (immutable after pool initialization)
+# ─────────────────────────────────────────────────────────────────────────────────
+# These define where JIT liquidity will be provided during swaps.
+#
+# CRITICAL: SQRT_PRICE must be at the geometric center of this range!
+# See the SQRT_PRICE documentation above for formulas and examples.
+#
+# RECOMMENDED WORKFLOW:
+#   1. Decide your target price (e.g., 1 DAI = 1 USDC)
+#   2. Calculate the center tick for that price
+#   3. Choose half_width based on desired concentration (1-5 tick spacings recommended)
+#   4. Set JIT_TICK_LOWER = centerTick - half_width * tickSpacing
+#   5. Set JIT_TICK_UPPER = centerTick + half_width * tickSpacing
+#   6. Calculate SQRT_PRICE using jit_range_to_sqrt_price(lower, upper)
+#
 # Full range example for tick spacing 60: min=-887220, max=887220
 JIT_TICK_LOWER_BASE_SEPOLIA=-887220
 JIT_TICK_UPPER_BASE_SEPOLIA=887220
