Scripts: Couple fixes and additions

--- a/.env.example
+++ b/.env.example
@@ -287,3 +287,78 @@ CURRENT_RATIO_BASE_SEPOLIA=500000000000000000
 # Ownership transfer (08_TransferOwnership.s.sol)
 NEW_OWNER_BASE_SEPOLIA=<MULTISIG_ADDRESS>
 
+# ═══════════════════════════════════════════════════════════════════════════════
+#                    WRAPPER DEPLOYMENT CONFIG
+# ═══════════════════════════════════════════════════════════════════════════════
+#
+# Wrappers are ERC-4626 yield vaults that integrate with external protocols
+# (Aave, Sky/Spark, etc.) and can be used as yield sources for Alphix hooks.
+#
+# Deployment Scripts:
+#   wrappers/aave/DeployAlphix4626WrapperAave.s.sol     → Generic ERC20 wrapper for Aave
+#   wrappers/aave/DeployAlphix4626WrapperWethAave.s.sol → WETH-specific wrapper for Aave
+#   wrappers/sky/DeployAlphix4626WrapperSky.s.sol       → USDS/sUSDS wrapper via Spark PSM
+#
+# ─────────────────────────────────────────────────────────────────────────────────
+# COMMON WRAPPER SETTINGS
+# ─────────────────────────────────────────────────────────────────────────────────
+
+# Fee recipient for yield fees (same for all wrappers)
+YIELD_TREASURY=<YOUR_TREASURY_ADDRESS>
+
+# Initial fee in hundredths of a bip (100_000 = 10%, 50_000 = 5%)
+INITIAL_FEE=100000
+
+# ─────────────────────────────────────────────────────────────────────────────────
+# AAVE WRAPPER - Generic ERC20 (DeployAlphix4626WrapperAave.s.sol)
+# ─────────────────────────────────────────────────────────────────────────────────
+# Aave V3 PoolAddressesProvider addresses:
+#   Mainnet:  0x2f39d218133AFaB8F2B819B1066c7E434Ad94E9e
+#   Arbitrum: 0xa97684ead0e402dC232d5A977953DF7ECBaB3CDb
+#   Optimism: 0xa97684ead0e402dC232d5A977953DF7ECBaB3CDb
+#   Polygon:  0xa97684ead0e402dC232d5A977953DF7ECBaB3CDb
+#   Base:     0xe20fCBdBfFC4Dd138cE8b2E6FBb6CB49777ad64D
+
+ASSET_ADDRESS=<UNDERLYING_ASSET_ADDRESS>
+POOL_ADDRESSES_PROVIDER=<AAVE_POOL_ADDRESSES_PROVIDER>
+SHARE_NAME="Alphix USDC Vault"
+SHARE_SYMBOL=alphUSDC
+SEED_LIQUIDITY=1000000
+
+# After deployment:
+# AAVE_WRAPPER_ADDRESS=<deployed_address>
+
+# ─────────────────────────────────────────────────────────────────────────────────
+# AAVE WETH WRAPPER (DeployAlphix4626WrapperWethAave.s.sol)
+# ─────────────────────────────────────────────────────────────────────────────────
+# WETH addresses:
+#   Mainnet:  0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2
+#   Arbitrum: 0x82aF49447D8a07e3bd95BD0d56f35241523fBab1
+#   Optimism: 0x4200000000000000000000000000000000000006
+#   Polygon:  0x7ceB23fD6bC0adD59E62ac25578270cFf1b9f619 (WETH, not native MATIC)
+#   Base:     0x4200000000000000000000000000000000000006
+
+WETH_ADDRESS=<WETH_CONTRACT_ADDRESS>
+# POOL_ADDRESSES_PROVIDER= (same as above)
+# SHARE_NAME="Alphix WETH Vault"
+# SHARE_SYMBOL=alphWETH
+# SEED_LIQUIDITY=1000000000000000000
+
+# After deployment:
+# AAVE_WETH_WRAPPER_ADDRESS=<deployed_address>
+
+# ─────────────────────────────────────────────────────────────────────────────────
+# SKY/SPARK WRAPPER - USDS/sUSDS (DeployAlphix4626WrapperSky.s.sol)
+# ─────────────────────────────────────────────────────────────────────────────────
+# Spark PSM3 addresses:
+#   Base: 0x1601843c5E9bC251A3272907010AFa41Fa18347E
+
+SKY_PSM_ADDRESS=<SPARK_PSM3_ADDRESS>
+SKY_SHARE_NAME="Alphix sUSDS Vault"
+SKY_SHARE_SYMBOL=alphsUSDS
+SKY_SEED_LIQUIDITY=1000000000000000000
+SKY_REFERRAL_CODE=0
+
+# After deployment:
+# SKY_WRAPPER_ADDRESS=<deployed_address>
+
