Chore: Transitioning to AM for Pausability + yield source transition non paused restriction removed

--- a/.env.example
+++ b/.env.example
@@ -71,6 +71,9 @@ YIELD_MANAGER_BASE_SEPOLIA=<YOUR_YIELD_MANAGER_ADDRESS>
 # Fee poker (can call poke() to update dynamic fee)
 FEE_POKER_BASE_SEPOLIA=<YOUR_FEE_POKER_ADDRESS>
 
+# Pauser (can pause/unpause the hook)
+PAUSER_BASE_SEPOLIA=<YOUR_PAUSER_ADDRESS>
+
 # ═══════════════════════════════════════════════════════════════════════════════
 #                    TESTNET MOCK TOKENS (Optional)
 # ═══════════════════════════════════════════════════════════════════════════════
